--- a/UI/forms/OBSBasic.ui
+++ b/UI/forms/OBSBasic.ui
@@ -311,6 +311,9 @@
             <property name="flat">
              <bool>true</bool>
             </property>
+            <property name="themeID2" stdset="0">
+             <string notr="true">contextBarButton</string>
+            </property>
            </widget>
           </item>
           <item>
@@ -327,6 +330,9 @@
             </property>
             <property name="flat">
              <bool>true</bool>
+            </property>
+            <property name="themeID2" stdset="0">
+             <string notr="true">contextBarButton</string>
             </property>
            </widget>
           </item>
