--- a/UI/data/themes/Acri.qss
+++ b/UI/data/themes/Acri.qss
@@ -313,10 +313,11 @@ QScrollBar::left-arrow:horizontal, QScrollBar::right-arrow:horizontal, QScrollBa
 
 /* Source Context */
 #contextContainer {
-    margin: 0px;
+    min-height: 40px;
+    max-height: 40px;
 }
 
-#contextContainer QPushButton {
+#contextContainer QPushButton[themeID2=contextBarButton] {
     padding: 0px;
 }
 
